# falOS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: commandmanager.cpp  commandmanager.h  core.cpp  core.h  executor.cpp  executor.h  terminal.cpp  terminal.h  user.h
fs/: FS.cpp  FS.h  file.h  folder.h
